# technical-documentation-suite

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  CLOUD_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  Dockerfile  LICENSE  Makefile  PRODUCTION_FIX.md  QUICK_START.md  README.md  cloudbuild.yaml  deploy-now.sh  deploy-simple.sh  deploy-to-gcp.sh  docker-compose.yml  env.example  main.py  pyproject.toml  quick_start.sh  requirements.txt  run.py  setup-service-account.sh  start_application.sh  test_agents_local.py  test_ai_mode.sh  test_api.sh  test_e2e_workflow.py  update-api-key.sh
.github/workflows/: deploy.yml
config/: __init__.py
deployment/: Dockerfile  cloud-run-service.yaml
docs/: DEPLOYMENT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  TEST_RESULTS.md  blog_post.md  mkdocs.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json  robots.txt
frontend/src/: App.js  index.css
frontend/src/components/: Footer.js  Header.js
frontend/src/config/: api.js
frontend/src/pages/: About.js  Documentation.js  Generate.js  Home.js  Status.js  TestPages.js
scripts/: clean_env.sh  deploy-to-gcp.sh  setup.sh  start_with_ai.sh  test.py  test_gcp_setup.sh
src/agents/: __init__.py  code_analyzer.py  doc_writer.py  orchestrator.py  translation_agent.py
src/services/: ai_service.py
src/tech_doc_suite/: __init__.py  config.py  main.py
src/tech_doc_suite/agents/: base_agent.py
src/tech_doc_suite/services/: ai_service.py  github_service.py
src/utils/: git_utils.py
static/: index.html
static/static/css/: main.00240de4.css  main.00240de4.css.map  main.0f289f17.css  main.0f289f17.css.map
static/static/js/: 134.4e82dc10.chunk.js.map  135.ccd0a60b.chunk.js  135.ccd0a60b.chunk.js.map  141.01ba3c14.chunk.js  141.01ba3c14.chunk.js.map  194.5a9b344a.chunk.js  20.4fc3d2af.chunk.js.map  349.bb098e6c.chunk.js.map  509.116b7420.chunk.js  532.3aaaa10b.chunk.js.map  550.acabfba5.chunk.js  56.535bc2a2.chunk.js.map  58.b007c714.chunk.js  58.b007c714.chunk.js.map  644.184c6f98.chunk.js.map  720.7bf258c7.chunk.js.map  745.e7bd54fe.chunk.js  75.29103e21.chunk.js.map  759.3d9298be.chunk.js  787.83f1294d.chunk.js.map  813.9c980130.chunk.js  813.9c980130.chunk.js.map  865.8560feaf.chunk.js  88.d08bcaf1.chunk.js  909.ddf5c67e.chunk.js  909.ddf5c67e.chunk.js.map  967.3b4b4811.chunk.js  main.2253a4ad.js  main.2253a4ad.js.LICENSE.txt  main.958a1968.js
terraform/: main.tf
tests/: fix_local_workflow.py  test_agents_local.py  test_e2e_workflow.py
